fixed saved movie list alignment issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,13 +50,16 @@ footer {
 
 .ui-state-default {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+  flex: 1 1 auto;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
   font-size: .75rem;
   margin-top: 2%;
   margin-bottom: 5%;
   border-radius: 10px;
   border: double;
+  width: 275px;
   padding: 5%;
 }
 
@@ -218,13 +221,15 @@ footer {
 }
 
 .delete-btn {
+  flex: 0 0 50px;
+  margin-left: auto;
   font-family: Montserrat;
   font-size: .6rem;
   background-color: #313b72;
   color: #f6faf6;
   border-radius: 5px;
-  width: 25%;
-  padding: 0% 3% 0% 3%;
+  width: 45px;
+  padding: 0%;
 }
 
 #movie-title.search-result-li {
